add tech skills

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
            <nav class="d-flex justify-content-between">
              <a href="/" title="Homepage">
         <img src="images/logo.png" alt="Igor logo" class="logo d-none d-md-block" />
-        <img src="images/logo-small1.png" alt="Igor mobile logo" class="d-block d-md-none logo">
+        <img src="images/mobile.png" alt="Igor mobile logo" class="d-block d-md-none logo">
         </a>
         <ul>
           <li class="active"><a href="index.html" title="Homepage">Home</li></a>
@@ -48,7 +48,7 @@
             </nav>
       </div>
 <!-- ABOUT -->
-    <div class="hero">
+    <div class="about">
       <p class="mb-3"> PAGE UNDER CONSTRUCTION <!-- Hello, I am--></p>
       <h1 class="mb-3">Igor Mirowski</h1>
       <h2 class="mb-5">Futureproof Tech Trainee, based in London, United Kingdom</h2>
@@ -138,6 +138,237 @@
       </div>
     </div>
 
+
+    <!-- TECHNOLOGY -->
+<!-- Tech skills section -->
+<section class="tech-skills-section">
+  <div class="container-xl tech-skills-container">
+    <h2 class="skills-title">Technical skills</h2>
+    <!-- Skills container -->
+    <div class="skills-container">
+
+  <div class="sm-skills-title-container">
+      <h2 class="sm-skills-title">Technical skills</h2>
+    </div>
+      <!-- HTML  -->
+      <div class="skill-item" id="html">
+        <img src="images/skills/html.png" class="card-img-top" alt="HTML 5 icon" />
+        <div class="card-body">
+          <p class="skill-text">HTML 5</p>
+        </div>
+      </div>
+
+      <!-- CSS  -->
+      <div class="skill-item" id="css">
+        <img src="images/skills/css.png" class="card-img-top" alt="CSS 3 icon" />
+        <div class="card-body">
+          <p class="skill-text">CSS 3</p>
+        </div>
+      </div>
+      <!-- Bootstrap  -->
+      <div class="skill-item" id="bootstrap">
+        <img
+          src="images/skills/bootstrap.png"
+          class="card-img-top"
+          alt="Bootstrap 5 icon"
+        />
+        <div class="card-body">
+          <p class="skill-text">Bootstrap 4/5</p>
+        </div>
+      </div>
+      <!-- JavaScript  -->
+      <div class="skill-item" id="javascript">
+        <img
+          src="images/skills/javascript.png"
+          class="card-img-top"
+          alt="JavaScript icon"
+        />
+        <div class="card-body">
+          <p class="skill-text">JavaScript ES5/6</p>
+        </div>
+      </div>
+      
+      <!-- Github -->
+      <div class="skill-item" id="github">
+        <img
+          src="images/skills/github.png"
+          class="card-img-top"
+          alt="GitHub icon"
+        />
+        <div class="card-body">
+          <p class="skill-text">GitHub</p>
+        </div>
+      </div>
+
+      <!-- Figma  -->
+      <div class="skill-item" id="figma">
+        <img src="images/skills/figma.png" class="card-img-top" alt="Figma icon" />
+        <div class="card-body">
+          <p class="skill-text">Figma</p>
+        </div>
+      </div>
+
+
+
+
+
+      <!-- React.js  -->
+      <div class="skill-item" id="react">
+        <img src="images/skills/react.png" class="card-img-top" alt="React icon" />
+        <div class="card-body">
+          <p class="skill-text">React</p>
+        </div>
+      </div>
+
+      <!-- React Router  -->
+      <div class="skill-item" id="react-router">
+        <img
+          src="images/skills/react_router.png"
+          class="card-img-top"
+          alt="React Router icon"
+        />
+        <div class="card-body">
+          <p class="skill-text">React Router</p>
+        </div>
+      </div>
+
+      <!-- Redux  -->
+      <div class="skill-item" id="redux">
+        <img src="images/skills/redux.png" class="card-img-top" alt="Redux icon" />
+        <div class="card-body">
+          <p class="skill-text">Redux</p>
+        </div>
+      </div>
+
+      <!-- BABEL  -->
+      <div class="skill-item" id="babel">
+        <img src="images/skills/babel.png" class="card-img-top" alt="Babel icon" />
+        <div class="card-body">
+          <p class="skill-text">Babel</p>
+        </div>
+      </div>
+
+      <!-- webpack -->
+      <div class="skill-item" id="webpack">
+        <img
+          src="images/skills/webpack.png"
+          class="card-img-top"
+          alt="webpack icon"
+        />
+        <div class="card-body">
+          <p class="skill-text">webpack</p>
+        </div>
+      </div>
+
+      <!-- Jest  -->
+      <div class="skill-item" id="jest">
+        <img src="images/skills/jest.png" class="card-img-top" alt="Jest icon" />
+        <div class="card-body">
+          <p class="skill-text">Jest</p>
+        </div>
+      </div>
+
+
+      <!-- JSON Web Token  -->
+      <div class="skill-item hide" id="json-web-token">
+        <img
+          src="images/skills/json_web_token.png"
+          class="card-img-top"
+          alt="JSON Web Token icon"
+        />
+        <div class="card-body">
+          <p class="skill-text">JSON Web Token</p>
+        </div>
+      </div>
+
+      <!-- Bcrypt  -->
+      <div class="skill-item hide" id="bcrypt">
+        <img
+          src="images/skills/bcrypt.png"
+          class="card-img-top"
+          alt="Bcrypt icon"
+        />
+        <div class="card-body">
+          <p class="skill-text">Bcrypt</p>
+        </div>
+      </div>
+
+      <!-- PostgreSQL  -->
+      <div class="skill-item hide" id="postgresql">
+        <img
+          src="images/skills/postgresql.png"
+          class="card-img-top"
+          alt="PostgreSQL icon"
+        />
+        <div class="card-body">
+          <p class="skill-text">PostgreSQL</p>
+        </div>
+      </div>
+
+      <!-- MongoDB  -->
+      <div class="skill-item hide" id="mongodb">
+        <img
+          src="images/skills/mongodb.png"
+          class="card-img-top"
+          alt="MongoDB icon"
+        />
+        <div class="card-body">
+          <p class="skill-text">MongoDB</p>
+        </div>
+      </div>
+
+      <!-- Node  -->
+      <div class="skill-item hide" id="node">
+        <img src="images/skills/node.png" class="card-img-top" alt="Node.js icon" />
+        <div class="card-body">
+          <p class="skill-text">Node</p>
+        </div>
+      </div>
+
+      <!-- Express  -->
+      <div class="skill-item hide" id="express">
+        <img
+          src="images/skills/express.png"
+          class="card-img-top"
+          alt="Express icon"
+        />
+        <div class="card-body">
+          <p class="skill-text">Express</p>
+        </div>
+      </div>
+
+      <!-- Docker  -->
+      <div class="skill-item hide" id="docker">
+        <img
+          src="images/skills/docker.png"
+          class="card-img-top"
+          alt="Docker icon"
+        />
+        <div class="card-body">
+          <p class="skill-text">Docker</p>
+        </div>
+      </div>
+
+      <!-- Flask  -->
+      <div class="skill-item hide" id="flask">
+        <img src="images/skills/flask.png" class="card-img-top" alt="Flask icon" />
+        <div class="card-body">
+          <p class="skill-text">Flask</p>
+        </div>
+      </div>
+
+      <!-- django  -->
+      <div class="skill-item hide" id="django">
+        <img
+          src="images/skills/django.png"
+          class="card-img-top"
+          alt="django icon"
+        />
+        <div class="card-body">
+          <p class="skill-text">django</p>
+        </div>
+      </div>
+</div>
     <!-- FOOTER -->
     <footer>
       <div class="contact-box d-flex justify-content-between m-5 position-relative">
