--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       content="Igor Mirowski portfolio"
     />
   
-<link rel="shortcut icon" type="image/jpg" href="./images/fox-svgrepo-com (1).svg"/>
+<link rel="shortcut icon" type="image/jpg" href="images/mobile.png"/>
     <title>Igor Mirowski Portfolio</title>
   </head>
   <body>
@@ -37,12 +37,12 @@
            <nav class="d-flex justify-content-between">
              <a href="/" title="Homepage">
         <img src="images/logo.png" alt="Igor logo" class="logo d-none d-md-block" />
-        <img src="images/mobile.png" alt="Igor mobile logo" class="d-block d-md-none logo">
+        <img src="images/mobile.png" alt="Igor mobile logo2" class="d-block d-md-none logo2">
         </a>
         <ul>
-          <li class="active"><a href="index.html" title="Homepage">Home</li></a>
-          <li><a href="index.html" title="About ">About</li></a>
-          <li><a href="index.html" title="About work">Projects</li></a>
+          <li class="active"><a href="index.html" title="Homepage">About</li></a>
+          <li><a href="index.html" title="Projects ">Projects</li></a>
+          <li><a href="index.html" title="Skills">Skills</li></a>
           <li><a href="index.html"title="Contact ">Contact</li></a>
         </ul>
             </nav>
@@ -59,6 +59,8 @@
     </div>
 
     <!-- PROJECTS -->
+
+    <!-- One -->
     <h4 class="text-center m-5">Featured Projects</h4>
     <div class="container">
 
@@ -68,14 +70,14 @@
           <img
             src="images/project1.png"
             alt="pictures of website "
-            class="img-fluid"
+            class="img-fluid logop"
           />
         </div>
         <div class="col">
           <div class="project-description">
             <h2 class="mb-5">Atomic Addicts Habit tracter</h2>
             <p class="mb-5 text-muted">
-              Atomic Addicts is an app is for tracking, managing and cultivating habits. Trere are five in-built habits for you to choose from: Sleeping, Exercise, Water Intake, Smoking, Savings. The goal was to make a use of database.
+              Atomic Addicts is an app is for tracking, managing and cultivating habits. Trere are five in-built habits for you to choose from: Sleeping, Exercise, Water Intake, Smoking and Savings. The goal was to make a use of database.
             </p>
             <a
               href="https://atomic-addicts.netlify.app/"
@@ -87,7 +89,7 @@
         </div>
       </div>
 
-
+    <!-- Two -->
       <div class="row mb-5">
         <div class="col">
           <div class="project-description">
@@ -107,18 +109,18 @@
           <img
             src="images/project2.png"
             alt="pictures of weather project"
-            class="img-fluid"
+            class="img-fluid logop"
           />
         </div>
       </div>
 
-
+        <!-- Three -->
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
           <img
             src="images/project3.png"
             alt="pictures of latte.io website"
-            class="img-fluid"
+            class="img-fluid logop"
           />
         </div>
         <div class="col">
@@ -207,10 +209,6 @@
           <p class="skill-text">Figma</p>
         </div>
       </div>
-
-
-
-
 
       <!-- React.js  -->
       <div class="skill-item" id="react">
