--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
         <img src="images/mobile.png" alt="Igor mobile logo2" class="d-block d-md-none logo2">
         </a>
         <ul>
-          <li class="active"><a href="index.html" title="Homepage">About</li></a>
-          <li><a href="index.html" title="Projects ">Projects</li></a>
-          <li><a href="index.html" title="Skills">Skills</li></a>
-          <li><a href="index.html"title="Contact ">Contact</li></a>
+          <li class="active"><a href="#about" title="Homepage">About</li></a>
+          <li><a href="#projects" title="Projects ">Projects</li></a>
+          <li><a href="#skills" title="Skills">Skills</li></a>
+          <li><a href="#contact"title="Contact ">Contact</li></a>
         </ul>
             </nav>
       </div>
 <!-- ABOUT -->
-    <div class="about">
+    <div class="about" id="#about">
       <p class="mb-3"> PAGE UNDER CONSTRUCTION <!-- Hello, I am--></p>
       <h1 class="mb-3">Igor Mirowski</h1>
       <h2 class="mb-5">Futureproof Tech Trainee, based in London, United Kingdom</h2>
@@ -61,7 +61,7 @@
     <!-- PROJECTS -->
 
     <!-- One -->
-    <h4 class="text-center m-5">Featured Projects</h4>
+    <h4 class="text-center m-5" id="projects">Featured Projects</h4>
     <div class="container">
 
 
@@ -145,7 +145,7 @@
 <!-- Tech skills section -->
 <section class="tech-skills-section">
   <div class="container-xl tech-skills-container">
-    <h2 class="skills-title">Technical skills</h2>
+    <h2 class="skills-title" id="skills">Technical skills</h2>
     <!-- Skills container -->
     <div class="skills-container">
 
@@ -369,7 +369,7 @@
 </div>
     <!-- FOOTER -->
     <footer>
-      <div class="contact-box d-flex justify-content-between m-5 position-relative">
+      <div class="contact-box d-flex justify-content-between m-5 position-relative" id="contact">
         <div>
         <h3>Contact Me</h3>
         </div>
