--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="container">
 
            <nav class="d-flex justify-content-between">
-             <a href="/" title="Homepage">
+             <a href="index.html" title="Homepage">
         <img src="images/logo.png" alt="Igor logo" class="logo d-none d-md-block" />
         <img src="images/mobile.png" alt="Igor mobile logo2" class="d-block d-md-none logo2">
         </a>
