--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
 <!-- ABOUT -->
     <div class="about" id="#about">
-      <p class="mb-3"> PAGE UNDER CONSTRUCTION <!-- Hello, I am--></p>
+      <p class="mb-3">Hello, I am</p>
       <h1 class="mb-3">Igor Mirowski</h1>
       <h2 class="mb-5">Futureproof Tech Trainee, based in London, United Kingdom</h2>
       <img src="images/igor.png" class="headshot"alt="igor headshot" height="230px">
