--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="about" id="#about">
       <p class="mb-3">Hello, I am</p>
       <h1 class="mb-3">Igor Mirowski</h1>
-      <h2 class="mb-5">Futureproof Tech Trainee, based in London, United Kingdom</h2>
+      <h2 class="mb-5">Futureproof Tech Trainee</h2>
       <img src="images/igor.png" class="headshot"alt="igor headshot" height="230px">
       <div>
         <a href="media/IgorMirowski.pdf" target="_blank" title="Igor Mirowski Curriculum Vitae" class="btn btn-branding" download>Download my CV</a>
