--- a/index.html
+++ b/index.html
@@ -59,10 +59,34 @@
     </div>
 
     <!-- PROJECTS -->
-
-    <!-- One -->
     <h4 class="text-center m-5" id="projects">Featured Projects</h4>
     <div class="container">
+      <!-- One -->
+      <div class="row mb-5">
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Dumbfounded App</h2>
+            <p class="mb-5 text-muted">
+              Dumbfounded? is an application that allows you to relax, have fun and get smarter! There are 3 different ways you can choose from how to play. You can play alone or with friends.
+            </p>
+            <a
+              href="https://dumbfounded.netlify.app/"
+              target="_blank"
+              class="btn btn-branding-outline"
+              >Learn more</a
+            >
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img
+            src="images/project0.png"
+            alt="pictures of weather project"
+            class="img-fluid logop"
+          />
+        </div>
+      </div>
+    <!-- Two -->
+    
 
 
       <div class="row mb-5">
@@ -89,7 +113,7 @@
         </div>
       </div>
 
-    <!-- Two -->
+    <!-- Three -->
       <div class="row mb-5">
         <div class="col">
           <div class="project-description">
@@ -114,7 +138,7 @@
         </div>
       </div>
 
-        <!-- Three -->
+        <!-- Four -->
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
           <img
